# token-store

cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: tests.rs
