[package]
name = "token-market-cli"
version = "0.1.0"
authors = ["Dmitry <mamhigtt@gmail.com>"]
description = "CLI tools for crating and managing token market inside Solona blockchain"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
solana-cli-config = "1.5.0"
solana-clap-utils = "1.5.0"
solana-logger = "1.5.0"
solana-client = "1.5.0"
token-market = { path="../program", features = [ "no-entrypoint" ] }
solana-sdk = "1.6.6"
borsh = "0.8.2"
anyhow = "1.0.36"
spl-token = "3.0.1"
spl-associated-token-account = {version = "1.0.2", features = [ "no-entrypoint" ] }
