[package]
name = "token-market"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.6.6"
thiserror = "1.0"
borsh = "0.8.2"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.6.6"
solana-sdk = "1.6.6"
spl-associated-token-account = {version = "1.0.2", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]